--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Bulma Utilities */
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -191,7 +192,8 @@
   fieldset[disabled] .pagination-ellipsis {
     cursor: not-allowed; }
 
-/*! bulma.io v0.9.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.9.1 | MIT License | github.com/jgthms/bulma */
+/* Bulma Utilities */
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -385,6 +387,7 @@
   fieldset[disabled] .pagination-ellipsis {
     cursor: not-allowed; }
 
+/* Bulma Base */
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
@@ -478,6 +481,7 @@ section {
 body,
 button,
 input,
+optgroup,
 select,
 textarea {
   font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif; }
@@ -505,7 +509,7 @@ a {
 
 code {
   background-color: whitesmoke;
-  color: #f14668;
+  color: #da1039;
   font-size: 0.875em;
   font-weight: normal;
   padding: 0.25em 0.5em 0.25em; }
@@ -564,6 +568,7 @@ table th {
 table th {
   color: #363636; }
 
+/* Bulma Elements */
 .box {
   background-color: white;
   border-radius: 6px;
@@ -792,7 +797,7 @@ a.box:active {
   position: relative;
   width: auto; }
   .container.is-fluid {
-    max-width: none;
+    max-width: none !important;
     padding-left: 32px;
     padding-right: 32px;
     width: 100%; }
@@ -800,16 +805,16 @@ a.box:active {
     .container {
       max-width: 960px; } }
   @media screen and (max-width: 1215px) {
-    .container.is-widescreen {
+    .container.is-widescreen:not(.is-max-desktop) {
       max-width: 1152px; } }
   @media screen and (max-width: 1407px) {
-    .container.is-fullhd {
+    .container.is-fullhd:not(.is-max-desktop):not(.is-max-widescreen) {
       max-width: 1344px; } }
   @media screen and (min-width: 1216px) {
-    .container {
+    .container:not(.is-max-desktop) {
       max-width: 1152px; } }
   @media screen and (min-width: 1408px) {
-    .container {
+    .container:not(.is-max-desktop):not(.is-max-widescreen) {
       max-width: 1344px; } }
 
 .content li + li {
@@ -1123,6 +1128,8 @@ a.box:active {
       background-color: transparent; }
     .progress:indeterminate::-moz-progress-bar {
       background-color: transparent; }
+    .progress:indeterminate::-ms-fill {
+      animation-name: none; }
   .progress.is-small {
     height: 0.75rem; }
   .progress.is-medium {
@@ -1425,6 +1432,7 @@ a.tag:hover {
   text-align: center;
   vertical-align: top; }
 
+/* Bulma Form */
 .input, .textarea, .taginput .taginput-container.is-focusable, .select select {
   background-color: white;
   border-color: #dbdbdb;
@@ -1548,7 +1556,9 @@ a.tag:hover {
     color: #363636; }
   .checkbox[disabled], .radio[disabled],
   fieldset[disabled] .checkbox,
-  fieldset[disabled] .radio {
+  fieldset[disabled] .radio,
+  .checkbox input[disabled],
+  .radio input[disabled] {
     color: #7a7a7a;
     cursor: not-allowed; }
 
@@ -1968,6 +1978,7 @@ a.tag:hover {
   .control.is-loading.is-large:after {
     font-size: 1.5rem; }
 
+/* Bulma Components */
 .breadcrumb {
   font-size: 1rem;
   white-space: nowrap; }
@@ -2024,9 +2035,11 @@ a.tag:hover {
 
 .card {
   background-color: white;
+  border-radius: 0.25rem;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   color: #4a4a4a;
   max-width: 100%;
+  overflow: hidden;
   position: relative; }
 
 .card-header {
@@ -2372,7 +2385,7 @@ button.dropdown-item {
   overflow: auto;
   position: relative;
   width: 100%; }
-  @media screen and (min-width: 769px), print {
+  @media screen and (min-width: 769px) {
     .modal-content,
     .modal-card {
       margin: 0 auto;
@@ -3131,6 +3144,7 @@ label.panel-block {
   .tabs.is-large {
     font-size: 1.5rem; }
 
+/* Bulma Grid */
 .column {
   display: block;
   flex-basis: 0;
@@ -4315,6 +4329,7 @@ label.panel-block {
       flex: none;
       width: 100%; } }
 
+/* Bulma Helpers */
 .has-text-progress {
   color: #00A7E1 !important; }
 
@@ -4378,6 +4393,168 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .has-background-white-bis {
   background-color: #fafafa !important; }
 
+.is-flex-direction-row {
+  flex-direction: row !important; }
+
+.is-flex-direction-row-reverse {
+  flex-direction: row-reverse !important; }
+
+.is-flex-direction-column {
+  flex-direction: column !important; }
+
+.is-flex-direction-column-reverse {
+  flex-direction: column-reverse !important; }
+
+.is-flex-wrap-nowrap {
+  flex-wrap: nowrap !important; }
+
+.is-flex-wrap-wrap {
+  flex-wrap: wrap !important; }
+
+.is-flex-wrap-wrap-reverse {
+  flex-wrap: wrap-reverse !important; }
+
+.is-justify-content-flex-start {
+  justify-content: flex-start !important; }
+
+.is-justify-content-flex-end {
+  justify-content: flex-end !important; }
+
+.is-justify-content-center {
+  justify-content: center !important; }
+
+.is-justify-content-space-between {
+  justify-content: space-between !important; }
+
+.is-justify-content-space-around {
+  justify-content: space-around !important; }
+
+.is-justify-content-space-evenly {
+  justify-content: space-evenly !important; }
+
+.is-justify-content-start {
+  justify-content: start !important; }
+
+.is-justify-content-end {
+  justify-content: end !important; }
+
+.is-justify-content-left {
+  justify-content: left !important; }
+
+.is-justify-content-right {
+  justify-content: right !important; }
+
+.is-align-content-flex-start {
+  align-content: flex-start !important; }
+
+.is-align-content-flex-end {
+  align-content: flex-end !important; }
+
+.is-align-content-center {
+  align-content: center !important; }
+
+.is-align-content-space-between {
+  align-content: space-between !important; }
+
+.is-align-content-space-around {
+  align-content: space-around !important; }
+
+.is-align-content-space-evenly {
+  align-content: space-evenly !important; }
+
+.is-align-content-stretch {
+  align-content: stretch !important; }
+
+.is-align-content-start {
+  align-content: start !important; }
+
+.is-align-content-end {
+  align-content: end !important; }
+
+.is-align-content-baseline {
+  align-content: baseline !important; }
+
+.is-align-items-stretch {
+  align-items: stretch !important; }
+
+.is-align-items-flex-start {
+  align-items: flex-start !important; }
+
+.is-align-items-flex-end {
+  align-items: flex-end !important; }
+
+.is-align-items-center {
+  align-items: center !important; }
+
+.is-align-items-baseline {
+  align-items: baseline !important; }
+
+.is-align-items-start {
+  align-items: start !important; }
+
+.is-align-items-end {
+  align-items: end !important; }
+
+.is-align-items-self-start {
+  align-items: self-start !important; }
+
+.is-align-items-self-end {
+  align-items: self-end !important; }
+
+.is-align-self-auto {
+  align-self: auto !important; }
+
+.is-align-self-flex-start {
+  align-self: flex-start !important; }
+
+.is-align-self-flex-end {
+  align-self: flex-end !important; }
+
+.is-align-self-center {
+  align-self: center !important; }
+
+.is-align-self-baseline {
+  align-self: baseline !important; }
+
+.is-align-self-stretch {
+  align-self: stretch !important; }
+
+.is-flex-grow-0 {
+  flex-grow: 0 !important; }
+
+.is-flex-grow-1 {
+  flex-grow: 1 !important; }
+
+.is-flex-grow-2 {
+  flex-grow: 2 !important; }
+
+.is-flex-grow-3 {
+  flex-grow: 3 !important; }
+
+.is-flex-grow-4 {
+  flex-grow: 4 !important; }
+
+.is-flex-grow-5 {
+  flex-grow: 5 !important; }
+
+.is-flex-shrink-0 {
+  flex-shrink: 0 !important; }
+
+.is-flex-shrink-1 {
+  flex-shrink: 1 !important; }
+
+.is-flex-shrink-2 {
+  flex-shrink: 2 !important; }
+
+.is-flex-shrink-3 {
+  flex-shrink: 3 !important; }
+
+.is-flex-shrink-4 {
+  flex-shrink: 4 !important; }
+
+.is-flex-shrink-5 {
+  flex-shrink: 5 !important; }
+
 .is-clearfix::after {
   clear: both;
   content: " ";
@@ -4395,6 +4572,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .is-shadowless {
   box-shadow: none !important; }
 
+.is-clickable {
+  cursor: pointer !important; }
+
 .is-clipped {
   overflow: hidden !important; }
 
@@ -4406,6 +4586,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 
 .is-paddingless {
   padding: 0 !important; }
+
+.m-0 {
+  margin: 0 !important; }
 
 .mt-0 {
   margin-top: 0 !important; }
@@ -4427,6 +4610,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   margin-top: 0 !important;
   margin-bottom: 0 !important; }
 
+.m-1 {
+  margin: 0.25rem !important; }
+
 .mt-1 {
   margin-top: 0.25rem !important; }
 
@@ -4446,6 +4632,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .my-1 {
   margin-top: 0.25rem !important;
   margin-bottom: 0.25rem !important; }
+
+.m-2 {
+  margin: 0.5rem !important; }
 
 .mt-2 {
   margin-top: 0.5rem !important; }
@@ -4467,6 +4656,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important; }
 
+.m-3 {
+  margin: 0.75rem !important; }
+
 .mt-3 {
   margin-top: 0.75rem !important; }
 
@@ -4486,6 +4678,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .my-3 {
   margin-top: 0.75rem !important;
   margin-bottom: 0.75rem !important; }
+
+.m-4 {
+  margin: 1rem !important; }
 
 .mt-4 {
   margin-top: 1rem !important; }
@@ -4507,6 +4702,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   margin-top: 1rem !important;
   margin-bottom: 1rem !important; }
 
+.m-5 {
+  margin: 1.5rem !important; }
+
 .mt-5 {
   margin-top: 1.5rem !important; }
 
@@ -4526,6 +4724,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .my-5 {
   margin-top: 1.5rem !important;
   margin-bottom: 1.5rem !important; }
+
+.m-6 {
+  margin: 3rem !important; }
 
 .mt-6 {
   margin-top: 3rem !important; }
@@ -4547,6 +4748,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   margin-top: 3rem !important;
   margin-bottom: 3rem !important; }
 
+.p-0 {
+  padding: 0 !important; }
+
 .pt-0 {
   padding-top: 0 !important; }
 
@@ -4566,6 +4770,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .py-0 {
   padding-top: 0 !important;
   padding-bottom: 0 !important; }
+
+.p-1 {
+  padding: 0.25rem !important; }
 
 .pt-1 {
   padding-top: 0.25rem !important; }
@@ -4587,6 +4794,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   padding-top: 0.25rem !important;
   padding-bottom: 0.25rem !important; }
 
+.p-2 {
+  padding: 0.5rem !important; }
+
 .pt-2 {
   padding-top: 0.5rem !important; }
 
@@ -4606,6 +4816,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important; }
+
+.p-3 {
+  padding: 0.75rem !important; }
 
 .pt-3 {
   padding-top: 0.75rem !important; }
@@ -4627,6 +4840,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   padding-top: 0.75rem !important;
   padding-bottom: 0.75rem !important; }
 
+.p-4 {
+  padding: 1rem !important; }
+
 .pt-4 {
   padding-top: 1rem !important; }
 
@@ -4647,6 +4863,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   padding-top: 1rem !important;
   padding-bottom: 1rem !important; }
 
+.p-5 {
+  padding: 1.5rem !important; }
+
 .pt-5 {
   padding-top: 1.5rem !important; }
 
@@ -4666,6 +4885,9 @@ a.has-text-progress:hover, a.has-text-progress:focus {
 .py-5 {
   padding-top: 1.5rem !important;
   padding-bottom: 1.5rem !important; }
+
+.p-6 {
+  padding: 3rem !important; }
 
 .pt-6 {
   padding-top: 3rem !important; }
@@ -5285,6 +5507,7 @@ a.has-text-progress:hover, a.has-text-progress:focus {
   .is-invisible-fullhd {
     visibility: hidden !important; } }
 
+/* Bulma Layout */
 .hero {
   align-items: stretch;
   display: flex;
